--- a/app/src/main/res/layout/activity_register_client.xml
+++ b/app/src/main/res/layout/activity_register_client.xml
@@ -212,7 +212,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:id="@+id/btn_register"
+                android:id="@+id/btn_complete"
                 android:text="@string/complete"
                 android:textStyle="bold"
                 android:textSize="23dp"
