--- a/app/src/main/res/layout/activity_registerque.xml
+++ b/app/src/main/res/layout/activity_registerque.xml
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:id="@+id/btn_login"
+                android:id="@+id/btn_shop"
                 android:text="@string/regis_nailshop"
                 android:textStyle="bold"
                 android:textSize="18dp"
@@ -57,7 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
-                android:id="@+id/btn_register"
+                android:id="@+id/btn_customer"
                 android:text="@string/regis_Customer"
                 android:textStyle="bold"
                 android:textSize="18dp"
