--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,24 +23,24 @@
         android:id="@+id/coordinator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:outlineProvider="background"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:outlineProvider="background">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment">
 
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:contentInsetStart="0dp">
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottom_nav"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:outlineAmbientShadowColor="@android:color/transparent"
-                android:outlineSpotShadowColor="@android:color/transparent"
-                app:itemIconTint="@drawable/menu_selector_color"
                 app:itemIconSize="25dp"
+                app:itemIconTint="@drawable/menu_selector_color"
                 app:itemRippleColor="@color/maincolor"
                 app:itemTextColor="@drawable/menu_selector_color"
                 app:menu="@menu/bottom_menu" />
