--- a/app/src/main/res/layout/item_mypage.xml
+++ b/app/src/main/res/layout/item_mypage.xml
@@ -9,14 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginHorizontal="25dp"
         android:gravity="center_vertical">
 
         <ImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_marginVertical="25dp"
-            android:id="@+id/img_profile"
+            android:layout_marginVertical="15dp"
+            android:id="@+id/img_menu"
             android:src="@mipmap/ic_launcher"/>
 
         <TextView
@@ -27,7 +26,7 @@
             android:textSize="20dp"
             android:textColor="@color/black"
             android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="25dp"/>
+            android:layout_marginVertical="15dp"/>
 
     </LinearLayout>
 
