--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,7 +22,7 @@
         tools:layout="@layout/fragment_chat" />
     <fragment
         android:id="@+id/menu_setting"
-        android:name="com.example.nailzip.SettingFragment"
+        android:name="com.example.nailzip.mypage.SettingFragment"
         android:label="fragment_setting"
         tools:layout="@layout/fragment_setting" />
 
