--- a/app/src/main/res/layout/activity_register_shop.xml
+++ b/app/src/main/res/layout/activity_register_shop.xml
@@ -213,6 +213,37 @@
                         android:textColor="@color/maincolor"/>
 
                     <EditText
+                        android:id="@+id/edt_shopphonenum"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/shopphonenum"
+                        android:textSize="18dp"
+                        android:inputType="phone"
+                        android:maxLength="13"
+                        android:background="@android:color/transparent">
+
+                    </EditText>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="44dp"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_marginHorizontal="30dp"
+                    android:layout_marginVertical="10dp"
+                    android:background="@drawable/edge_txtbox">
+
+                    <com.example.nailzip.FontAwesomeTextLight
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:textSize="20sp"
+                        android:layout_marginHorizontal="20dp"
+                        android:textColor="@color/maincolor"/>
+
+                    <EditText
                         android:id="@+id/edt_phonenum"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -225,6 +256,7 @@
                     </EditText>
 
                 </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
