--- a/app/src/main/res/layout/activity_register_shop.xml
+++ b/app/src/main/res/layout/activity_register_shop.xml
@@ -34,7 +34,9 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
+            android:overScrollMode="never"
+            android:fillViewport="true"
             android:layout_weight="1">
 
             <LinearLayout
@@ -42,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center_horizontal"
-                android:layout_marginTop="50dp">
+                android:layout_marginTop="30dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -304,7 +306,6 @@
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:id="@+id/btn_complete"
                 android:text="@string/complete"
                 android:textStyle="bold"
