--- a/app/src/main/res/layout/activity_find_idactivity.xml
+++ b/app/src/main/res/layout/activity_find_idactivity.xml
@@ -8,6 +8,18 @@
     android:background="@color/maincolor"
     android:orientation="vertical">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tb_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/maincolor"
+        android:backgroundTint="@color/maincolor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.appcompat.widget.Toolbar>
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
@@ -72,6 +84,7 @@
                     android:id="@+id/edt_username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="15dp"
                     android:hint="@string/find_username"
                     android:inputType="textPersonName"
                     android:background="@android:color/transparent">
@@ -102,6 +115,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/phonenum"
+                    android:textSize="15dp"
                     android:inputType="phone"
                     android:maxLength="13"
                     android:background="@android:color/transparent">
