--- a/app/src/main/res/layout/activity_found_idactivity.xml
+++ b/app/src/main/res/layout/activity_found_idactivity.xml
@@ -8,6 +8,18 @@
     android:background="@color/maincolor"
     android:orientation="vertical">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tb_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/maincolor"
+        android:backgroundTint="@color/maincolor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.appcompat.widget.Toolbar>
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
@@ -74,6 +86,7 @@
                     android:id="@+id/txt_foundID"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="15dp"
                     android:layout_marginLeft="10dp"
                     android:text="@string/noID"
                     android:background="@android:color/transparent">
