--- a/app/src/main/res/layout/fragment_nail_shop.xml
+++ b/app/src/main/res/layout/fragment_nail_shop.xml
@@ -7,7 +7,6 @@
     tools:context=".NailShopFragment"
     android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
         android:layout_width="match_parent"
@@ -43,13 +42,13 @@
             android:textSize="25dp"
             android:textColor="@color/black"/>
 
-        <com.example.nailzip.FontAwesomeTextLight
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textSize="25sp"
-            android:layout_margin="10dp"
-            android:textColor="@color/black"/>
+        <androidx.constraintlayout.utils.widget.ImageFilterButton
+            android:id="@+id/btn_region"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/ic_round_keyboard_arrow_down_40"
+            android:backgroundTint="#00000000"/>
+
     </LinearLayout>
 
     <androidx.constraintlayout.widget.Guideline
@@ -63,6 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="25dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal"
         android:gravity="right"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,18 +70,37 @@
         app:layout_constraintTop_toTopOf="@+id/guideline2">
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_sort"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#F3E5F5"
+            android:drawableRight="@drawable/ic_round_keyboard_arrow_down_24"
             android:text="@string/sort_recommand"
             android:textColor="@color/black"
+            android:textSize="15dp"
             android:textStyle="bold"
             app:cornerRadius="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
     </LinearLayout>
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.2" />
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scrollbarFadeDuration="0"
+        android:scrollbarSize="5dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
