--- a/app/src/main/res/layout/activity_store_info.xml
+++ b/app/src/main/res/layout/activity_store_info.xml
@@ -121,6 +121,38 @@
                     <com.example.nailzip.FontAwesomeTextLight
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text=""
+                        android:textSize="20sp"
+                        android:layout_marginLeft="20dp"
+                        android:textColor="@color/maincolor"/>
+
+                    <EditText
+                        android:id="@+id/edt_closed"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/closed"
+                        android:layout_marginLeft="16dp"
+                        android:textSize="18dp"
+                        android:inputType="text"
+                        android:background="@android:color/transparent">
+
+                    </EditText>
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="44dp"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_marginHorizontal="30dp"
+                    android:layout_marginVertical="10dp"
+                    android:background="@drawable/edge_txtbox">
+
+                    <com.example.nailzip.FontAwesomeTextLight
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text=""
                         android:textSize="20sp"
                         android:layout_marginLeft="17dp"
