--- a/app/src/main/res/layout/item_shop.xml
+++ b/app/src/main/res/layout/item_shop.xml
@@ -67,14 +67,31 @@
             />
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="("
+            android:textColor="#727272"
+            android:textSize="18dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="5dp"/>
+
+        <TextView
             android:id="@+id/tv_ratingcnt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ex_count"
             android:textColor="#727272"
             android:textSize="18dp"
+            android:layout_gravity="center_vertical"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=")"
+            android:textColor="#727272"
+            android:textSize="18dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginHorizontal="5dp"/>
+            android:layout_marginRight="5dp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -96,14 +113,30 @@
             android:layout_marginHorizontal="5dp"/>
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="(휴무 : "
+            android:textColor="#727272"
+            android:textSize="18dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="5dp"/>
+
+        <TextView
             android:id="@+id/tv_closed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ex_closed"
             android:textColor="#727272"
             android:textSize="18dp"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="5dp"/>
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=")"
+            android:textColor="#727272"
+            android:textSize="18dp"
+            android:layout_gravity="center"/>
 
     </LinearLayout>
 
