--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -2,22 +2,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/icon_chatUser"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_chatuser"/>
-
-    <TextView
-        android:id="@+id/tv_chatUserName"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="사용자 이름"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="30dp"/>
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginVertical="15dp"
+        android:layout_marginHorizontal="15dp">
 
+        <ImageView
+            android:id="@+id/icon_chatUser"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_chatuser"/>
+
+        <TextView
+            android:id="@+id/tv_chatUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="사용자 이름"
+            android:textColor="#5f5f5f"
+            android:textSize="20dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dp"/>
+    </LinearLayout>
+
+
+
+    <View
+        android:id="@+id/view_line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#EBEBEB"/>
 
 
 </LinearLayout>
