[FEAT] Create function of Chatting

--- a/app/src/main/res/layout/activity_chattingroom.xml
+++ b/app/src/main/res/layout/activity_chattingroom.xml
@@ -21,12 +21,29 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+<!--    <androidx.constraintlayout.widget.Guideline-->
+<!--        android:id="@+id/guideline1"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="1dp"-->
+<!--        android:orientation="horizontal"-->
+<!--        app:layout_constraintGuide_percent="0.07" />-->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/msgRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tb_back" />
+
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:background="@color/white"
         android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -36,9 +53,9 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginVertical="5dp"
-            android:textSize="25dp"
+            android:layout_marginLeft="25dp"
             android:textColor="@color/black"
-            android:layout_marginLeft="25dp" />
+            android:textSize="25dp" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_send"
@@ -49,7 +66,7 @@
             android:background="@drawable/edge"
             android:text="@string/send"
             android:textColor="@color/white"
-            android:textSize="20dp"/>
+            android:textSize="20dp" />
 
     </LinearLayout>
 
