--- a/app/src/main/res/layout/activity_chattingroom.xml
+++ b/app/src/main/res/layout/activity_chattingroom.xml
@@ -55,18 +55,19 @@
             android:layout_marginVertical="5dp"
             android:layout_marginLeft="25dp"
             android:textColor="@color/black"
-            android:textSize="25dp" />
+            android:textSize="20dp" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_send"
-            android:layout_width="80dp"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_marginVertical="5dp"
             android:layout_marginRight="25dp"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/edge"
             android:text="@string/send"
             android:textColor="@color/white"
-            android:textSize="20dp" />
+            android:textSize="15dp" />
 
     </LinearLayout>
 
