--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:layout_marginVertical="15dp"
+        android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="15dp">
 
         <ImageView
@@ -18,15 +18,31 @@
             android:layout_height="30dp"
             android:src="@drawable/ic_chatuser"/>
 
-        <TextView
-            android:id="@+id/tv_chatUserName"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="사용자 이름"
-            android:textColor="#5f5f5f"
-            android:textSize="20dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="15dp"/>
+            android:orientation="vertical"
+            android:layout_marginLeft="15dp">
+
+            <TextView
+                android:id="@+id/tv_chatUserName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="사용자 이름"
+                android:textColor="#5f5f5f"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/tv_chatItem_last"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="마지막 메세지"
+                android:textColor="#5f5f5f"
+                android:textSize="13dp"
+                android:layout_marginTop="10dp"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 
