--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -22,10 +22,53 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/txt_msgItem"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/txt_msgItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="메세지 내용"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/txt_msgItem_readCounter_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2"
+                android:textSize="9dp"
+                android:textColor="@color/maincolor"
+                android:visibility="invisible"
+                android:layout_margin="2dp"/>
+
+            <TextView
+                android:id="@+id/txt_msgTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2022.09.09 09:09"
+                android:textSize="9dp"
+                android:textColor="@android:color/darker_gray"/>
+
+            <TextView
+                android:id="@+id/txt_msgItem_readCounter_right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2"
+                android:textSize="9dp"
+                android:textColor="@color/maincolor"
+                android:visibility="invisible"
+                android:layout_margin="2dp"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 
 
