--- a/app/src/main/res/layout/item_shop.xml
+++ b/app/src/main/res/layout/item_shop.xml
@@ -165,6 +165,7 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginHorizontal="25dp"
         android:background="#EBEBEB"/>
 
