[FEAT] Creating ability to scrap

--- a/app/src/main/res/layout/item_post_detail.xml
+++ b/app/src/main/res/layout/item_post_detail.xml
@@ -60,7 +60,7 @@
             android:padding="8dp">
 
             <Button
-                android:id="@+id/btn_post_scrab"
+                android:id="@+id/btn_post_scrap"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
