--- a/app/src/main/res/layout/fragment_info_home.xml
+++ b/app/src/main/res/layout/fragment_info_home.xml
@@ -169,7 +169,7 @@
         app:layout_constraintTop_toBottomOf="@+id/view_line1">
 
         <LinearLayout
-            android:id="@+id/linear_scrab"
+            android:id="@+id/linear_scrap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -179,7 +179,7 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <Button
-                android:id="@+id/btn_scrab"
+                android:id="@+id/btn_scrap"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:textColor="#00000000"
